dist/1.0/bin/sample/retrieveUnpackaged/objects/Provisioning_Plan__c.object
<CustomObject>
    <description>Provisioning Plan definition</description>
    <fields>
        <fullName>Assigned_Product_Text__c</fullName>
        <label>Assigned Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <description>Bandwidth</description>
        <inlineHelpText>Bandwidth</inlineHelpText>
        <label>Bandwidth</label>
        <picklist>
            <picklistValues>
                <fullName>1000Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC192</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS3 (Coax)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE (Cat5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Pair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CAssigned_Product__c</fullName>
        <description>Indicates, for what Product was the Plan configured</description>
        <inlineHelpText>Indicates, for what Product was the Plan configured</inlineHelpText>
        <label>Assigned Product (custom)</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Provisioning Plans</relationshipLabel>
        <relationshipName>Provisioning_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Provisioning Plan&apos;s Description</description>
        <inlineHelpText>Provisioning Plan&apos;s Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date_Field_Name__c</fullName>
        <defaultValue>&quot;Customer_Expected_Delivery__c&quot;</defaultValue>
        <description>Field name for field containing due date (ie. Due_Date__c).</description>
        <inlineHelpText>Enter field name for field containing due date (ie. Due_Date__c).</inlineHelpText>
        <label>Due Date Field Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extranet_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provisioning Plan applicable for Extranet Orders</description>
        <inlineHelpText>Provisioning Plan applicable for Extranet Orders</inlineHelpText>
        <label>Extranet Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTT__c</fullName>
        <description>FTT</description>
        <inlineHelpText>FTT</inlineHelpText>
        <label>FTT</label>
        <picklist>
            <picklistValues>
                <fullName>BOD Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-BOD Approved</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>GTS Location</description>
        <inlineHelpText>GTS Location</inlineHelpText>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ICB_Type__c</fullName>
        <description>ICB Type</description>
        <inlineHelpText>ICB Type</inlineHelpText>
        <label>ICB Type</label>
        <picklist>
            <picklistValues>
                <fullName>Capacity Augment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Not Available/Capacity Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collocation Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended DMARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber to the Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard Product/Product Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 2 Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is definition or instance of the plan</description>
        <inlineHelpText>Indicates if this is definition or instance of the plan</inlineHelpText>
        <label>Instance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Object__c</fullName>
        <description>Add objects to the translateMasterObject map in the ProvisioningPlan.cls APEX class.</description>
        <inlineHelpText>Technical field</inlineHelpText>
        <label>Master Object</label>
        <picklist>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OSS_Technology_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Plan is part of automatically assigned OSS Technology</description>
        <inlineHelpText>Indicates if Plan is part of automatically assigned OSS Technology</inlineHelpText>
        <label>OSS Technology Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Record_Type__c</fullName>
        <description>Object Record Type</description>
        <inlineHelpText>Object Record Type</inlineHelpText>
        <label>Object Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fiber to the Tower</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrderLine_Type__c</fullName>
        <description>Indicates, for what OrderLine Types was the Plan configured</description>
        <inlineHelpText>Indicates, for what OrderLine Types was the Plan configured</inlineHelpText>
        <label>OrderLine Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numbers Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numbers Cession</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <description>Order Id</description>
        <formula>Order_Line__r.OrderLookup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Order Id</inlineHelpText>
        <label>Order Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Status__c</fullName>
        <description>Order Line Status</description>
        <formula>TEXT(Order_Line__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Order Line Status</inlineHelpText>
        <label>Order Line Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <description>Order Line, for which this Instance of Plan has been configured</description>
        <inlineHelpText>Order Line, for which this Instance of Plan has been configured</inlineHelpText>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Provisioning Plans</relationshipLabel>
        <relationshipName>Provisioning_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Order Type</description>
        <inlineHelpText>Order Type</inlineHelpText>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSP Underground Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSP Aerial Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSP Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Spares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Part</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Interval__c</fullName>
        <description>Actual Plan Interval (length) in Business Days. Calculated automatically based on Tasks&apos; Due Dates.</description>
        <inlineHelpText>Actual Plan Interval (length) in Business Days. Calculated automatically based on Tasks&apos; Due Dates.</inlineHelpText>
        <label>Plan Interval</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <description>Provisioning Plan&apos;s Name</description>
        <inlineHelpText>Provisioning Plan&apos;s Name</inlineHelpText>
        <label>Plan Name</label>
        <length>155</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product</description>
        <inlineHelpText>Product</inlineHelpText>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Private Line</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wavelengths</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Fiber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Modem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Various Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gateway Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch Partition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switched Ethernet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provisioning_Method__c</fullName>
        <description>Provisioning Method</description>
        <inlineHelpText>Provisioning Method</inlineHelpText>
        <label>Provisioning Method</label>
        <picklist>
            <picklistValues>
                <fullName>On-Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type II</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provisioning_Plan__c</fullName>
        <description>Link to Provisioning Plan</description>
        <formula>HYPERLINK(&apos;/&apos; +  Id , Plan_Name__c , &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Provisioning Plan</inlineHelpText>
        <label>Provisioning Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <description>Quote Type</description>
        <inlineHelpText>Quote Type</inlineHelpText>
        <label>Quote Type</label>
        <picklist>
            <picklistValues>
                <fullName>Budgetary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_of_Delay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enforce Reason of Delay</description>
        <inlineHelpText>Enforce Reason of Delay setting while performing Provisioning Plan</inlineHelpText>
        <label>Reason of Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Request Type</description>
        <inlineHelpText>Request Type</inlineHelpText>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>ICB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Simplified_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provisioning Plan applicable for Simplified Orders</description>
        <inlineHelpText>Provisioning Plan applicable for Simplified Orders</inlineHelpText>
        <label>Simplified Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Standard_Interval__c</fullName>
        <description>Standard Interval (in business days)</description>
        <inlineHelpText>Please enter the standard interval for the provisioning plan.  The standard interval should be entered in business days.</inlineHelpText>
        <label>Standard Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Datetime__c</fullName>
        <description>Datetime from which Tasks&apos; Due Dates should be calculated.</description>
        <inlineHelpText>Datetime from which Tasks&apos; Due Dates should be calculated.</inlineHelpText>
        <label>Starting Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Provisioning Plan&apos;s Status</description>
        <inlineHelpText>Provisioning Plan&apos;s Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcircuit_status__c</fullName>
        <description>Capacity Status</description>
        <inlineHelpText>Capacity Status</inlineHelpText>
        <label>Capacity Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Indicates, for what Technology was the Plan configured</description>
        <inlineHelpText>Indicates, for what Technology was the Plan configured</inlineHelpText>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>DSL (Attach DSL Order Form)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased Line</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Provisioning Plan</label>
    <listViews>
        <fullName>Active_Provisioning_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>OrderLine_Type__c</columns>
        <columns>Simplified_Order__c</columns>
        <columns>Assigned_Product_Text__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Instance__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Provisioning Plans</label>
    </listViews>
    <listViews>
        <fullName>All_Provisioning_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>OrderLine_Type__c</columns>
        <columns>Assigned_Product_Text__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Instance__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Provisioning Plans</label>
    </listViews>
    <listViews>
        <fullName>Disconnect_Prov_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>OrderLine_Type__c</columns>
        <columns>CAssigned_Product__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OrderLine_Type__c</field>
            <operation>includes</operation>
            <value>Disconnection</value>
        </filters>
        <filters>
            <field>Instance__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Disconnect Prov Plans</label>
    </listViews>
    <listViews>
        <fullName>Email_Box_plans</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Assigned_Product_Text__c</columns>
        <columns>GTS_Location__c</columns>
        <columns>OrderLine_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OrderLine_Type__c</field>
            <operation>includes</operation>
            <value>New Service</value>
        </filters>
        <filters>
            <field>Instance__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Assigned_Product_Text__c</field>
            <operation>contains</operation>
            <value>E-MAIL_BOX</value>
        </filters>
        <label>Email Box plans</label>
    </listViews>
    <listViews>
        <fullName>HU_PP_definitions</fullName>
        <columns>NAME</columns>
        <columns>Provisioning_Plan__c</columns>
        <columns>Plan_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_Product_Text__c</columns>
        <columns>CAssigned_Product__c</columns>
        <columns>Bandwidth__c</columns>
        <columns>Subcircuit_status__c</columns>
        <columns>Description__c</columns>
        <columns>Due_Date_Field_Name__c</columns>
        <columns>Extranet_Order__c</columns>
        <columns>Instance__c</columns>
        <columns>Master_Object__c</columns>
        <columns>Object_Record_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Instance__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Plan_Name__c</field>
            <operation>startsWith</operation>
            <value>HU_</value>
        </filters>
        <label>HU PP definitions</label>
    </listViews>
    <listViews>
        <fullName>PL_Provisioning_Plans</fullName>
        <columns>Plan_Name__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location__c</field>
            <operation>equals</operation>
            <value>GTS Poland</value>
        </filters>
        <filters>
            <field>Instance__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>PL Provisioning Plans</label>
        <sharedTo>
            <roles>Project Manager PL</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Provisioning_Plan_Definitions</fullName>
        <columns>Plan_Name__c</columns>
        <columns>NAME</columns>
        <columns>OrderLine_Type__c</columns>
        <columns>Assigned_Product_Text__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Instance__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Provisioning Plan Definitions</label>
    </listViews>
    <listViews>
        <fullName>Service_Order_Plans</fullName>
        <columns>NAME</columns>
        <columns>OrderLine_Type__c</columns>
        <columns>CAssigned_Product__c</columns>
        <columns>Plan_Name__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OrderLine_Type__c</field>
            <operation>excludes</operation>
            <value>New Service</value>
        </filters>
        <filters>
            <field>OrderLine_Type__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Instance__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Service Order Plans</label>
    </listViews>
    <nameField>
        <displayFormat>PPL{000000000}</displayFormat>
        <label>Provisioning Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I20000000HVCiEAO_00N20000002hTsIEAU</fullName>
        <active>true</active>
        <field>Provisioning_Plan_Task_Selection__c.Provisioning_Plan__c</field>
        <filterItems>
            <field>Provisioning_Plan__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Task Plan</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Provisioning Plan Task Selection_Provisi</name>
    </namedFilters>
    <pluralLabel>Provisioning Plans</pluralLabel>
    <recordTypes>
        <fullName>Order</fullName>
        <active>true</active>
        <description>Record Type for Order&apos;s Provisioning Plan</description>
        <label>Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Task_Plan</fullName>
        <active>true</active>
        <description>Record Type for conditional Plans triggered from Tasks during provisioning</description>
        <label>Task Plan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Reason_of_Delay_flag_change</fullName>
        <active>false</active>
        <description>Reason of Delay flag can be changed on Provisioning Plan definition only (not instance).</description>
        <errorConditionFormula>AND(Instance__c = true, ISCHANGED( Reason_of_Delay__c ) )</errorConditionFormula>
        <errorDisplayField>Reason_of_Delay__c</errorDisplayField>
        <errorMessage>Reason of Delay flag can be changed only on Provisioning Plan definition (not instance).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Starting_Datetime_on_instance</fullName>
        <active>false</active>
        <description>Starting Datetime can be set on plan instance only</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(Starting_Datetime__c)), Instance__c=false), true, false)</errorConditionFormula>
        <errorDisplayField>Starting_Datetime__c</errorDisplayField>
        <errorMessage>Starting Datetime can be set on Provisioning Plan instance only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Starting_Datetime_past</fullName>
        <active>false</active>
        <description>Starting Datetime can not be set in past.</description>
        <errorConditionFormula>Starting_Datetime__c &lt; NOW()</errorConditionFormula>
        <errorDisplayField>Starting_Datetime__c</errorDisplayField>
        <errorMessage>Starting Datetime can not be set in past.</errorMessage>
    </validationRules>
</CustomObject>